# public-finance-data-hub

./: .env  .env.example  .gitignore  CREDENTIALS_CONFIGURED.md  DEPLOYMENT_READY.txt  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  SETUP_GOOGLE_DRIVE.md  STATUS.md  YOUR_CREDENTIALS_HERE.txt  pyproject.toml  setup_credentials.sh
.github/workflows/: ci.yml  daily-ingest.yml
secrets/: .gitkeep
src/public_finance_data_hub/: __init__.py  cli.py
src/public_finance_data_hub/config/: sources.yml
src/public_finance_data_hub/connectors/: __init__.py  anbima.py  b3.py  base.py  bcb_sgs.py  cvm.py  fred.py  google_drive.py
src/public_finance_data_hub/core/: cache.py  http_client.py  rate_limiter.py
src/public_finance_data_hub/sources/: base_source.py
src/public_finance_data_hub/storage/: __init__.py  lake.py
src/public_finance_data_hub/utils/: __init__.py  dates.py  hashing.py  http.py  logging.py
tests/: conftest.py  test_connectors.py  test_storage.py
